// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`expandableCard > renders correctly with complex header 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__jd0jfn2 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_normal_xxsmall__toi52u5v"
      style="--_4k0ekn0: 100%;"
    >
      <details
        class="styles__jd0jfn3"
        data-clicking="false"
      >
        <summary
          class="styles__jd0jfn1"
          data-disabled="false"
        >
          <svg
            class="styles__jd0jfn4 styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_sentiment_neutral__vbm0wq9 styles_size_small__vbm0wqg styles_undefined_compound_34__vbm0wq1i"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
              fill-rule="evenodd"
            />
          </svg>
          <div>
            <h2
              class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
            >
              Title
            </h2>
            <p
              class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_caption__m4c9owu style_undefined_compound_72__m4c9ow3f"
            >
              Description
            </p>
          </div>
        </summary>
        <div
          class="styles__jd0jfn5"
        >
          Content
        </div>
      </details>
    </div>
  </div>
</DocumentFragment>
`;

exports[`expandableCard > renders correctly with default values 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__jd0jfn2 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_normal_xxsmall__toi52u5v"
      style="--_4k0ekn0: 100%;"
    >
      <details
        class="styles__jd0jfn3"
        data-clicking="false"
      >
        <summary
          class="styles__jd0jfn1"
          data-disabled="false"
        >
          <svg
            class="styles__jd0jfn4 styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_sentiment_neutral__vbm0wq9 styles_size_small__vbm0wqg styles_undefined_compound_34__vbm0wq1i"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
              fill-rule="evenodd"
            />
          </svg>
          <h2
            class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
          >
            Title
          </h2>
        </summary>
        <div
          class="styles__jd0jfn5"
        >
          Content
        </div>
      </details>
    </div>
  </div>
</DocumentFragment>
`;

exports[`expandableCard > works properly draggable 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__jd0jfn2 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_normal_xxsmall__toi52u5v"
      data-draggable="true"
      data-value="card-1"
      draggable="true"
      style="--_4k0ekn0: 100%;"
    >
      <div
        class="styles__jd0jfn6 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_center_xxsmall__toi52u61"
        data-testid="draggable-icon-card-1"
        data-visible="true"
      >
        <div
          aria-controls="_r_6_"
          aria-describedby="_r_6_"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <svg
            class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_strong__vbm0wq4 styles_sentiment_neutral__vbm0wq9 styles_size_small__vbm0wqg styles_undefined_compound_42__vbm0wq1q"
            viewBox="0 0 16 16"
          >
            <path
              d="M5.5 14q-.618 0-1.06-.44A1.45 1.45 0 0 1 4 12.5q0-.619.44-1.06Q4.883 11 5.5 11t1.06.44q.44.442.44 1.06t-.44 1.06Q6.12 14 5.5 14m4.5 0q-.619 0-1.06-.44a1.45 1.45 0 0 1-.44-1.06q0-.619.44-1.06Q9.382 11 10 11t1.06.44q.44.442.44 1.06t-.44 1.06Q10.617 14 10 14M5.5 9.5q-.618 0-1.06-.44A1.44 1.44 0 0 1 4 8q0-.619.44-1.06.442-.44 1.06-.44t1.06.44Q7 7.383 7 8t-.44 1.06q-.44.44-1.06.44m4.5 0q-.619 0-1.06-.44A1.44 1.44 0 0 1 8.5 8q0-.619.44-1.06.441-.44 1.06-.44t1.06.44q.44.442.44 1.06t-.44 1.06q-.442.44-1.06.44M5.5 5q-.618 0-1.06-.44A1.44 1.44 0 0 1 4 3.5q0-.62.44-1.06Q4.883 2 5.5 2t1.06.44Q7 2.883 7 3.5q0 .62-.44 1.06T5.5 5M10 5q-.619 0-1.06-.44A1.44 1.44 0 0 1 8.5 3.5q0-.62.44-1.06Q9.382 2 10 2t1.06.44q.44.442.44 1.06 0 .62-.44 1.06Q10.617 5 10 5"
            />
          </svg>
        </div>
      </div>
      <details
        class="styles__jd0jfn3"
        data-clicking="true"
      >
        <summary
          class="styles__jd0jfn1"
          data-disabled="false"
        >
          <svg
            class="styles__jd0jfn4 styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_sentiment_neutral__vbm0wq9 styles_size_small__vbm0wqg styles_undefined_compound_34__vbm0wq1i"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
              fill-rule="evenodd"
            />
          </svg>
          <h2
            class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
          >
            Title
          </h2>
        </summary>
        <div
          class="styles__jd0jfn5"
        >
          Content
        </div>
      </details>
      <div
        class="styles__jd0jfn0"
        data-first="true"
      />
      <div
        class="styles__jd0jfn0"
        data-testid="card-1-dropable-area"
        style="border-color: transparent;"
      />
    </div>
    <div
      class="styles__jd0jfn2 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_normal_xxsmall__toi52u5v"
      data-draggable="true"
      data-value="card-2"
      draggable="true"
      style="--_4k0ekn0: 100%;"
    >
      <div
        class="styles__jd0jfn6 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_center_xxsmall__toi52u61"
        data-testid="draggable-icon-card-2"
        data-visible="false"
      >
        <div
          aria-controls="_r_8_"
          aria-describedby="_r_8_"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <svg
            class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_weak__vbm0wq6 styles_sentiment_neutral__vbm0wq9 styles_size_small__vbm0wqg styles_undefined_compound_58__vbm0wq26"
            viewBox="0 0 16 16"
          >
            <path
              d="M5.5 14q-.618 0-1.06-.44A1.45 1.45 0 0 1 4 12.5q0-.619.44-1.06Q4.883 11 5.5 11t1.06.44q.44.442.44 1.06t-.44 1.06Q6.12 14 5.5 14m4.5 0q-.619 0-1.06-.44a1.45 1.45 0 0 1-.44-1.06q0-.619.44-1.06Q9.382 11 10 11t1.06.44q.44.442.44 1.06t-.44 1.06Q10.617 14 10 14M5.5 9.5q-.618 0-1.06-.44A1.44 1.44 0 0 1 4 8q0-.619.44-1.06.442-.44 1.06-.44t1.06.44Q7 7.383 7 8t-.44 1.06q-.44.44-1.06.44m4.5 0q-.619 0-1.06-.44A1.44 1.44 0 0 1 8.5 8q0-.619.44-1.06.441-.44 1.06-.44t1.06.44q.44.442.44 1.06t-.44 1.06q-.442.44-1.06.44M5.5 5q-.618 0-1.06-.44A1.44 1.44 0 0 1 4 3.5q0-.62.44-1.06Q4.883 2 5.5 2t1.06.44Q7 2.883 7 3.5q0 .62-.44 1.06T5.5 5M10 5q-.619 0-1.06-.44A1.44 1.44 0 0 1 8.5 3.5q0-.62.44-1.06Q9.382 2 10 2t1.06.44q.44.442.44 1.06 0 .62-.44 1.06Q10.617 5 10 5"
            />
          </svg>
        </div>
      </div>
      <details
        class="styles__jd0jfn3"
        data-clicking="false"
      >
        <summary
          class="styles__jd0jfn1"
          data-disabled="false"
        >
          <svg
            class="styles__jd0jfn4 styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_sentiment_neutral__vbm0wq9 styles_size_small__vbm0wqg styles_undefined_compound_34__vbm0wq1i"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
              fill-rule="evenodd"
            />
          </svg>
          <h2
            class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
          >
            Title
          </h2>
        </summary>
        <div
          class="styles__jd0jfn5"
        >
          Content
        </div>
      </details>
      <div
        class="styles__jd0jfn0"
        data-testid="card-2-dropable-area"
      />
    </div>
    <div
      class="styles__jd0jfn2 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_normal_xxsmall__toi52u5v"
      data-draggable="true"
      data-value="card-3"
      draggable="true"
      style="--_4k0ekn0: 100%;"
    >
      <div
        class="styles__jd0jfn6 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_center_xxsmall__toi52u61"
        data-testid="draggable-icon-card-3"
        data-visible="false"
      >
        <div
          aria-controls="_r_a_"
          aria-describedby="_r_a_"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <svg
            class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_weak__vbm0wq6 styles_sentiment_neutral__vbm0wq9 styles_size_small__vbm0wqg styles_undefined_compound_58__vbm0wq26"
            viewBox="0 0 16 16"
          >
            <path
              d="M5.5 14q-.618 0-1.06-.44A1.45 1.45 0 0 1 4 12.5q0-.619.44-1.06Q4.883 11 5.5 11t1.06.44q.44.442.44 1.06t-.44 1.06Q6.12 14 5.5 14m4.5 0q-.619 0-1.06-.44a1.45 1.45 0 0 1-.44-1.06q0-.619.44-1.06Q9.382 11 10 11t1.06.44q.44.442.44 1.06t-.44 1.06Q10.617 14 10 14M5.5 9.5q-.618 0-1.06-.44A1.44 1.44 0 0 1 4 8q0-.619.44-1.06.442-.44 1.06-.44t1.06.44Q7 7.383 7 8t-.44 1.06q-.44.44-1.06.44m4.5 0q-.619 0-1.06-.44A1.44 1.44 0 0 1 8.5 8q0-.619.44-1.06.441-.44 1.06-.44t1.06.44q.44.442.44 1.06t-.44 1.06q-.442.44-1.06.44M5.5 5q-.618 0-1.06-.44A1.44 1.44 0 0 1 4 3.5q0-.62.44-1.06Q4.883 2 5.5 2t1.06.44Q7 2.883 7 3.5q0 .62-.44 1.06T5.5 5M10 5q-.619 0-1.06-.44A1.44 1.44 0 0 1 8.5 3.5q0-.62.44-1.06Q9.382 2 10 2t1.06.44q.44.442.44 1.06 0 .62-.44 1.06Q10.617 5 10 5"
            />
          </svg>
        </div>
      </div>
      <details
        class="styles__jd0jfn3"
        data-clicking="false"
      >
        <summary
          class="styles__jd0jfn1"
          data-disabled="false"
        >
          <svg
            class="styles__jd0jfn4 styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_sentiment_neutral__vbm0wq9 styles_size_small__vbm0wqg styles_undefined_compound_34__vbm0wq1i"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
              fill-rule="evenodd"
            />
          </svg>
          <h2
            class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
          >
            Title
          </h2>
        </summary>
        <div
          class="styles__jd0jfn5"
        >
          Content
        </div>
      </details>
      <div
        class="styles__jd0jfn0"
        data-testid="card-3-dropable-area"
      />
    </div>
  </div>
</DocumentFragment>
`;
